Fixed: green dot too high

--- a/src/components/homepage/Contact.module.css
+++ b/src/components/homepage/Contact.module.css
@@ -145,7 +145,7 @@
 	}
 
 	.dot {
-		top: 10%;
+		top: 13%;
 	}
 
 	.socials,
